--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.86) unstable; urgency=low
+
+  * dh_compress: don't try to re-compress *.gz files. Eliminates warning
+    messages in some cases, shouldn't actually change the result at all.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 27 Apr 1998 15:21:33 -0700
+
 debhelper (0.85) unstable; urgency=low
 
   * Moved a few things around that were broken by Che's patch:
