--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -19,12 +19,13 @@ package dh_installdocs is told to act on. By default, this is the first
 binary package in debian/control, but if you use -p, -i, or -a flags, it 
 will be the first package specified by those flags.
 .P
-Also,  debian/README.Debian (or debian/README.debian) and debian/TODO, if 
+Also, debian/README.Debian (or debian/README.debian) and debian/TODO, if 
 they exist, will be installed into the first binary package listed in 
 debian/control, if dh_installdocs is acting on that package. Note that 
 debian/TODO will be installed named TODO.Debian, if the package is not a 
 debian native package. Also note that README.debian is installed as
-README.Debian, for consitency.
+README.Debian, for consitency. Note that debian/package.README.Debian and
+debian/package.TODO can be used to specify files for subpackages.
 .P
 A file named debian/package.docs (debian/docs may be used for the first
 binary package in debian/control) can list other files to be installed.
