--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.91) unstable; urgency=low
+
+  * dh_installdocs: support debian/<package>.{README.Debian,TODO}
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 17 Jun 1998 19:09:35 -0700
+
 debhelper (0.90) unstable; urgency=low
 
   * I'd like to thank Len Pikulski and Igor Grobman at nothinbut.net for
