--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.92) unstable; urgency=low
+
+  * dh_gencontrol: pass -isp to dpkg-gencontrol to make it include section
+    and priority info in the .deb file. Back in Jan 1998, this came up, and
+    a consensus was reached on debian-devel that it was a good thing for
+    -isp to be used.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 19 Jun 1998 16:15:24 -0700
+
 debhelper (0.91) unstable; urgency=low
 
   * dh_installdocs: support debian/<package>.{README.Debian,TODO}
