--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.93) unstable; urgency=low
+
+  * Depend on file, since several dh_*'s use it.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 19 Jun 1998 21:43:51 -0700
+
 debhelper (0.92) unstable; urgency=low
 
   * dh_gencontrol: pass -isp to dpkg-gencontrol to make it include section
