--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.94) unstable; urgency=low
+
+  * dh_md5sums: fixed so it handles spaces and other odd characters in 
+    filenames correctly. (#23046, #23700, #22010)
+  * As a side effect, got rid of the nasty temporary file dh_md5sums used
+    before.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Jun 1998 16:14:42 -0700
+
 debhelper (0.93) unstable; urgency=low
 
   * Depend on file, since several dh_*'s use it.
