--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.95) unstable; urgency=low
+
+  * dh_movefiles: move even very strangly named files. (#23775) Unfortunatly,
+    I had to use a temporary file. Oh well..
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Jun 1998 17:16:17 -0700
+
 debhelper (0.94) unstable; urgency=low
 
   * dh_md5sums: fixed so it handles spaces and other odd characters in 
