--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.96) unstable; urgency=low
+
+  * dh_movefiles: fixed serious breakage introduced in the last version.
+  * dh_movefiles: really order all symlinks last.
+  * some minor reorganization of the source tree.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 28 Jun 1998 21:53:45 -0700
+
 debhelper (0.95) unstable; urgency=low
 
   * dh_movefiles: move even very strangly named files. (#23775) Unfortunatly,
