--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.98) unstable; urgency=low
+
+  * dh_lib: isnative: pass -l<changelog> to dpkg-parsechangelog, to support
+    odd packages with multiple different debian changelogs.
+  * doc/PROGRAMMING: cleaned up the docs on DH_EXCLUDE_FIND.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  6 Jul 1998 12:45:13 -0700
+
 debhelper (0.97) unstable; urgency=low
 
   * doc/from-debstd: fixed a typo.
