--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.99.1) unstable; urgency=low
+
+  * dh_installcron: now supports /etc/cron.d (#25112).
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 27 Jul 1998 20:18:47 -0700
+
 debhelper (0.99) unstable; urgency=low
 
   * !!!! WARNING: Debhelper (specifically dh_compress) is broken with
