--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.99.2) unstable; urgency=low
+
+  * dh_movefiles: allow passing of files to move on the command line. Only
+    rarely does this make sense. (#25197)
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 30 Jul 1998 10:38:34 -0700
+
 debhelper (0.99.1) unstable; urgency=low
 
   * dh_installcron: now supports /etc/cron.d (#25112).
