--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.99.4) unstable; urgency=low
+
+  * dh_debstd: only warn about scripts that actually lack #DEBHELPER#.
+    (#25514)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  7 Aug 1998 12:06:28 -0700
+
 debhelper (0.99.3) unstable; urgency=low
 
   * dh_movefiles: Fixed a over-eager sanity check introduced in the last
