--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.99.3) unstable; urgency=low
+
+  * dh_movefiles: Fixed a over-eager sanity check introduced in the last
+    version.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  3 Aug 1998 18:31:45 -0700
+
 debhelper (0.99.2) unstable; urgency=low
 
   * dh_movefiles: allow passing of files to move on the command line. Only
