--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+debhelper (1.0) stable unstable; urgency=low
+
+  * 1.0 at last!
+  
+  * This relelase is not really intended for stable. I throw a copy into
+    stable-updates because I want it to be available as an upgrade for
+    people using debian 2.0 (the current version in debian 2.0 has no
+    critical bugs, but this version is of course a lot nicer), and I plan
+    to start work on a new branch of debhelper that will fix many wishlist
+    bug reports, and of course introduce many new bugs, and which will go
+    into unstable only.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  8 Aug 1998 17:33:20 -0700
+
 debhelper (0.99.4) unstable; urgency=low
 
   * dh_debstd: only warn about scripts that actually lack #DEBHELPER#.
